add delete task endpoint
